--- a/content/Inertia.html
+++ b/content/Inertia.html
@@ -2,7 +2,57 @@
 <h2>Inertia</h2>
 <p><a href="https://en.wikipedia.org/wiki/Inertia">Inertia is the tendency of objects in motion to stay in motion and objects at rest to stay at rest</a>. As a predicament, <strong>inertia is the unbudging nature of the trendlines and modes of being of modern civilisation</strong>. Through energy extraction and economic growth we've accelerated to such speeds that we seem unable to slow down and, if the engine was to stop, our inertia would keep us heading straight for the precipice. Inertia presents us with the fact that it wouldn't be enough to stop our negatively impacting actions, we would have to actively reverse their effects or prepare to recover from the crash. A controlled descent, a <a href="https://www.penguinrandomhouse.com/books/675703/hospicing-modernity-by-vanessa-machado-de-oliveira/">hospicing of modernity</a>.</p>
 <p><strong>Outgoing connections:</strong></p>
-<br>
-<br>
-<br>
+<h1>Inertia</h1>
+<p><a href="https://en.wikipedia.org/wiki/Inertia">Inertia is the tendency of objects in motion to stay in motion and objects at rest to stay at rest</a>. As a predicament, <strong>inertia is the unbudging nature of the trendlines and modes of being of modern civilisation</strong>. Through energy extraction and economic growth we've accelerated to such speeds that we seem unable to slow down and, if the engine was to stop, our inertia would keep us heading straight for the precipice. Inertia presents us with the fact that it wouldn't be enough to stop our negatively impacting actions, we would have to actively reverse their effects or prepare to recover from the crash. A controlled descent, a <a href="https://www.penguinrandomhouse.com/books/675703/hospicing-modernity-by-vanessa-machado-de-oliveira/">hospicing of modernity</a>.</p>
+
+<h2>Outgoing connections:</h2>
+<ul>
+	<li><a href="Acceleration.html">Acceleration</a> - Unable to brake, we press both feet into the accelerator.</li>
+	<li><a href="Ancient sunlight, old sunlight, current sunlight.html">Ancient sunlight, old sunlight, current sunlight</a> - With so much built on fossil fuels, kicking the habit becomes no easy feat.</li>
+	<li><a href="Apathy.html">Apathy</a> - Aren't we just flies trying to stop a cement truck?</li>
+	<li><a href="Avoiding radical options.html">Avoiding radical options</a></li>
+	<li><a href="Business-as-usual narrative.html">Business-as-usual narrative</a></li>
+	<li><a href="Climate change.html">Climate change</a> - Can we even wisely guess?</li>
+	<li><a href="Dealing with death.html">Dealing with death</a> - The firmness of the grip with which I see people hold onto the promises of modernity... Staggering.</li>
+	<li><a href="Debt.html">Debt</a> - Economic inertia, incentivised inertia.</li>
+	<li><a href="Despair.html">Despair</a></li>
+	<li><a href="Directionlessness.html">Directionlessness</a></li>
+	<li><a href="Educational systems.html">Educational systems</a> - I'm not sure. Does education suck because of too few reforms or too many? Probably neither, we've most likely based our assumptions about the whole thing on some back-of-the-envelope scribbles of a dead white brit with a wacky beard. Safe bet, usually.</li>
+	<li><a href="Electric vehicle solutions.html">Electric vehicle solutions</a> - Managing the inertia of having designed an entire society after blueprints drawn with petrol.</li>
+	<li><a href="End of history.html">End of history</a></li>
+	<li><a href="Energy consumption increasing.html">Energy consumption increasing</a></li>
+	<li><a href="Failure to take responsibility.html">Failure to take responsibility</a> - Not an excuse.</li>
+	<li><a href="Greenwashing.html">Greenwashing</a> - Paint our allegedely unavoidable violence a different hue.</li>
+	<li><a href="Growth.html">Growth</a></li>
+	<li><a href="Ignorance of ongoing collapse.html">Ignorance of ongoing collapse</a> - I sometimes, lazily, end up using the analogy of modernity being a vehicle headed for a precipice. Oftentimes, a better analogy is of a train colliding with a solid obsidian wall in slow motion. Or a tidal wave, already high above our heads, slowly rolling, darkening, crashing down.</li>
+	<li><a href="Illusion of no option.html">Illusion of no option</a> - We have to continue.</li>
+	<li><a href="Immoral justifications.html">Immoral justifications</a> - In fact, we should continue!</li>
+	<li><a href="Ineffective institutions.html">Ineffective institutions</a> - Institutions bore me to death so if you've just arrived at this connection, look out the window if you can, take a deep breath or two, straighten your neck and spine just slightly, take a couple of seconds to be broadly aware of sounds and noises around you, and whenever you're ready, you may continue this pointless search for answers.</li>
+	<li><a href="Lack of agency.html">Lack of agency</a></li>
+	<li><a href="Lack of balance.html">Lack of balance</a> - Altogether off balance.</li>
+	<li><a href="Lack of faith in anything.html">Lack of faith in anything</a></li>
+	<li><a href="Lack of feeling needed.html">Lack of feeling needed</a> - In a sense, you aren't needed, not by the dominant leading systems. Find the work in the margins.</li>
+	<li><a href="Lack of purpose.html">Lack of purpose</a></li>
+	<li><a href="Lack of the longterm.html">Lack of the longterm</a> - What do you mean lack? How is "continuing forever" not a longterm plan?</li>
+	<li><a href="Lack of visions.html">Lack of visions</a> - Strange how we entered the 2nd millenium, a time so rich in visions of grandeur, only to wholly lose any coherent vision of any future whatsoever. Well, if this was supposed to be the future, I can understand the scepticism.</li>
+	<li><a href="Limits to growth.html">Limits to growth</a> - Some, we have blasted through, others lie a short distance ahead of us.</li>
+	<li><a href="Map and territory.html">Map and territory</a> - But the GPS is saying we should continue straight ahead.</li>
+	<li><a href="Material extraction.html">Material extraction</a></li>
+	<li><a href="Misinformation.html">Misinformation</a> - Behind modernity's inertia and its many justifications lie immense tragedies of misinformation.</li>
+	<li><a href="Naive progress narrative.html">Naive progress narrative</a> - Look ma', no hands!</li>
+	<li><a href="No value in maintenance.html">No value in maintenance</a></li>
+	<li><a href="Over-reliance on technology.html">Over-reliance on technology</a></li>
+	<li><a href="Planetary boundaries.html">Planetary boundaries</a> - Wait, what's the current highscore?</li>
+	<li><a href="Poisoning the water, the earth, the air.html">Poisoning the water, the earth, the air</a> - Everlasting.</li>
+	<li><a href="Pollution.html">Pollution</a></li>
+	<li><a href="Profit.html">Profit</a> - It's required to be along for the ride.</li>
+	<li><a href="Resources.html">Resources</a> - Want a tip? Sometimes, there are decent arguments for the slowing of the engines of modernity. The arguments tend to point at some sort of decoupling between wealth and energy or welfare and carbon emissions. That's great, really, good job. My tip is to compare alleged progress with resource use, especially material resources. Sweden is frequently raised as an example of an innovative nation acting as a good example of the enlightened wonders and ingenuity of modernity, and as a nation currently recirculates 3-4% of its material resources. </li>
+	<li><a href="Slow change.html">Slow change</a> - Either that or rapid change in an undesirable direction.</li>
+	<li><a href="Sustainable growth.html">Sustainable growth</a> - Put sustainable in front of anything and it sounds like you're making an effort to do good. Sustainable child rape, sustainable war crimes, sustainable torture.</li>
+	<li><a href="The desacration of all places.html">The desacration of all places</a> - A wave of destruction that keeps circling the Earth, independent of our intentions.</li>
+	<li><a href="The impossibility of UBI.html">The impossibility of UBI</a> - We simply must keep pushing. Inertia is not just an effect, it's an obligation.</li>
+	<li><a href="Too much speed and noise.html">Too much speed and noise</a></li>
+	<li><a href="Unbalanced longtermism.html">Unbalanced longtermism</a></li>
+	<li><a href="Unheeded warnings.html">Unheeded warnings</a> - We've left the last STOP-sign far behind us.</li>
+</ul>
 </body></html>
