Fix broken links for Artificial Intelligence

--- a/content/Advertising.html
+++ b/content/Advertising.html
@@ -10,7 +10,7 @@
 	<li><strong><a href="Addiction.html">Addiction</a></strong> - The most sucessful advertising campaign creates new addicts.</li>
 	<li><strong><a href="Algorithmic curation.html">Algorithmic curation</a></strong> - Algorithmic curation has largely been driven by the desire to optimise advertising.</li>
 	<li><strong><a href="Architecture.html">Architecture</a></strong> - No matter how ugly a building already is, slapping a billboard on it is always a disservice to beauty.</li>
-	<li><strong><a href="Artificial intelligence.html">Artificial intelligence</a></strong> - Similar to algorithmic curation above, the development and application of artificial intelligence has been driven by optimising advertising strategies</li>
+	<li><strong><a href="Artificial Intelligence.html">Artificial Intelligence</a></strong> - Similar to algorithmic curation above, the development and application of artificial intelligence has been driven by optimising advertising strategies</li>
 	<li><strong><a href="Attention hijacking.html">Attention hijacking</a></strong> - Advertisements are designed to hijack your attention. It is their purpose.</li>
 	<li><strong><a href="Big tech.html">Big tech</a></strong> - A majority of the tech giants are, in their business essence, advertising companies and aggregators.</li>
 	<li><strong><a href="Breakdown of information infrastructure.html">Breakdown of information infrastructure</a></strong> - Ads seem to spread like viruses or expand like cancers. Papers, websites, everything gets covered.</li>
