--- a/content/Algorithmic curation.html
+++ b/content/Algorithmic curation.html
@@ -16,7 +16,7 @@
 	<li><strong><a href="Acceleration.html">Acceleration</a></strong> - Algorithmic curation accelerates many processes. One example is how efficiently it accelerates people's political views towards radical extremes.</li>
 	<li><strong><a href="Addiction.html">Addiction</a></strong> - A highly successful algorithmic curation makes addicts of the service's users.</li>
 	<li><strong><a href="Advertising.html">Advertising</a></strong> - Most efforts to curate media and information algorithmically are done for the sake of more effective advertising.</li>
-	<li><strong><a href="Artificial intelligence.html">Artificial intelligence</a></strong> - Algorithmic curation is and has been a major driver in popularising the use of artificial intelligence.</li>
+	<li><strong><a href="Artificial Intelligence.html">Artificial Intelligence</a></strong> - Algorithmic curation is and has been a major driver in popularising the use of artificial intelligence.</li>
 	<li><strong><a href="Attention hijacking.html">Attention hijacking</a></strong> - Algorithmic curation has as its purpose to shape your attention.</li>
 	<li><strong><a href="Blaming the people.html">Blaming the people</a></strong> - If you have an issue with algorithmic curation, that's on you. We simply serve you what you truly want to see.</li>
 	<li><strong><a href="Breakdown of information infrastructure.html">Breakdown of information infrastructure</a></strong> - Algorithmic curation pigeon holes people into echo chambers that form their view of reality, a reality wholly different than the ones presented in other pigeon holes.</li>
