--- a/content/Biased evidence selection.html
+++ b/content/Biased evidence selection.html
@@ -12,7 +12,7 @@ the world is too full to talk about.</p>
 </blockquote>
 <p><strong>Outgoing connections:</strong></p>
 <ul>
-	<li><strong><a href="Artificial intelligence.html">Artificial intelligence</a></strong> - Biased evidence selection is a very literal way of expressing what an AI does.</li>
+	<li><strong><a href="Artificial Intelligence.html">Artificial Intelligence</a></strong> - Biased evidence selection is a very literal way of expressing what an AI does.</li>
 	<li><strong><a href="Being reasonable.html">Being reasonable</a></strong> - Simply having factual evidence is often enough appear reasonable.</li>
 	<li><strong><a href="Cognitive dissonance.html">Cognitive dissonance</a></strong> - If factual evidence is seen as truth we will all of a sudden find ourselves in a world of conflicting dissonant truths.</li>
 	<li><strong><a href="Dispositionism.html">Dispositionism</a></strong> - Our evidence often decides our disposition.</li>
