--- a/content/Big tech.html
+++ b/content/Big tech.html
@@ -7,7 +7,7 @@
 	<li><strong><a href="Addiction.html">Addiction</a></strong></li>
 	<li><strong><a href="Advertising.html">Advertising</a></strong></li>
 	<li><strong><a href="Algorithmic curation.html">Algorithmic curation</a></strong></li>
-	<li><strong><a href="Artificial intelligence.html">Artificial intelligence</a></strong></li>
+	<li><strong><a href="Artificial Intelligence.html">Artificial Intelligence</a></strong></li>
 	<li><strong><a href="Centralisation.html">Centralisation</a></strong></li>
 	<li><strong><a href="Data privacy.html">Data privacy</a></strong></li>
 	<li><strong><a href="Exponential technology.html">Exponential technology</a></strong></li>
