--- a/content/Bullshit jobs.html
+++ b/content/Bullshit jobs.html
@@ -8,7 +8,7 @@
 <ul>
 	<li><strong><a href="Air travel.html">Air travel</a></strong> - Not the clearest connection, perhaps. When we get the chance to spend a few weeks away from our bullshit jobs, we want to spend those weeks far away, as far away as possible.</li>
 	<li><strong><a href="Apathy.html">Apathy</a></strong></li>
-	<li><strong><a href="Artificial intelligence.html">Artificial intelligence</a></strong> - If AI can take part of the load of bullshit you're carrying at work, you'll most likely use it.</li>
+	<li><strong><a href="Artificial Intelligence.html">Artificial Intelligence</a></strong> - If AI can take part of the load of bullshit you're carrying at work, you'll most likely use it.</li>
 	<li><strong><a href="Bureaucracy.html">Bureaucracy</a></strong></li>
 	<li><strong><a href="Directionlessness.html">Directionlessness</a></strong> - Onwards! Full steam ahead towards... Retirement?</li>
 	<li><strong><a href="Distractions.html">Distractions</a></strong> - Our jobs are our great distractors.</li>
