--- a/content/Business-as-usual narrative.html
+++ b/content/Business-as-usual narrative.html
@@ -11,7 +11,7 @@
 	<li><strong><a href="Acceleration.html">Acceleration</a></strong> - Just keep swimming.</li>
 	<li><strong><a href="Addiction.html">Addiction</a></strong></li>
 	<li><strong><a href="Air travel.html">Air travel</a></strong> - Just keep flying. Other people go to Mallorca, why shouldn't you?</li>
-	<li><strong><a href="Artificial intelligence.html">Artificial intelligence</a></strong> - The smoldering desire to have everything comtinue is one of the main drivers of pushing the development of artificial intelligence. An artificial fertiliser for our business processes.</li>
+	<li><strong><a href="Artificial Intelligence.html">Artificial Intelligence</a></strong> - The smoldering desire to have everything comtinue is one of the main drivers of pushing the development of artificial intelligence. An artificial fertiliser for our business processes.</li>
 	<li><strong><a href="Avoiding radical options.html">Avoiding radical options</a></strong></li>
 	<li><strong><a href="Being reasonable.html">Being reasonable</a></strong> - When the only reasonable option for any system is to reject a changing of the course, the system's cracks quickly show.</li>
 	<li><strong><a href="Big tech.html">Big tech</a></strong> - Big tech is the usual business.</li>
