--- a/content/Data privacy.html
+++ b/content/Data privacy.html
@@ -9,7 +9,7 @@
 <ul>
 	<li><strong><a href="Advertising.html">Advertising</a></strong> - It's so cute when people think targeted advertising is for the consumer.</li>
 	<li><strong><a href="Algorithmic curation.html">Algorithmic curation</a></strong></li>
-	<li><strong><a href="Artificial intelligence.html">Artificial intelligence</a></strong></li>
+	<li><strong><a href="Artificial Intelligence.html">Artificial Intelligence</a></strong></li>
 	<li><strong><a href="Big tech.html">Big tech</a></strong> - Checking my browser I can see that for the past week I have around 7000 blocked tracking attempts from Google. And my browser is a telegraph machine.</li>
 	<li><strong><a href="Laws.html">Laws</a></strong> - You don't need to dig far into my data to find actions punishable my law. Terrible actions such as file sharing and the growing of plants. Hey, American TSA agent, if you're reading this, you probably shouldn't let me into your country. Not that I'd do anything but I'll just say it here in case you've been forced to read through all of this.</li>
 	<li><strong><a href="Monopolies.html">Monopolies</a></strong> - The few companies with monopolies on certain data are some of the most influential companies on Earth.</li>
