--- a/content/Exponential technology.html
+++ b/content/Exponential technology.html
@@ -4,7 +4,7 @@
 <p><strong>Outgoing connections:</strong></p>
 <ul>
 	<li><strong><a href="Acceleration.html">Acceleration</a></strong></li>
-	<li><strong><a href="Artificial intelligence.html">Artificial intelligence</a></strong> - Exponential increases in computation.</li>
+	<li><strong><a href="Artificial Intelligence.html">Artificial Intelligence</a></strong> - Exponential increases in computation.</li>
 	<li><strong><a href="Big tech.html">Big tech</a></strong> - Exponential technologies drive the big tech companies.</li>
 	<li><strong><a href="Catastrophic risks.html">Catastrophic risks</a></strong> - Truly exponential curves are never good news.</li>
 	<li><strong><a href="Delusional domination of nature.html">Delusional domination of nature</a></strong></li>
