--- a/content/Faulty meta-optimisation.html
+++ b/content/Faulty meta-optimisation.html
@@ -5,7 +5,7 @@
 <p><strong>Outgoing connections:</strong></p>
 <ul>
 	<li><strong><a href="Acceleration.html">Acceleration</a></strong> - We have meta-optimised for speed and growth.</li>
-	<li><strong><a href="Artificial intelligence.html">Artificial intelligence</a></strong> - If we deem an artificial intelligence particularly intelligent, what do we mean by that? Do we mean that it seems to optimise for the same things we optimise for? Should it? Or is the way AIs "think" reflecting how we are already selecting what human intelligence means? Which minds are rising to the top of the power struggle? Do the way they "think" reflect what most humans optimise for?</li>
+	<li><strong><a href="Artificial Intelligence.html">Artificial Intelligence</a></strong> - If we deem an artificial intelligence particularly intelligent, what do we mean by that? Do we mean that it seems to optimise for the same things we optimise for? Should it? Or is the way AIs "think" reflecting how we are already selecting what human intelligence means? Which minds are rising to the top of the power struggle? Do the way they "think" reflect what most humans optimise for?</li>
 	<li><strong><a href="Being reasonable.html">Being reasonable</a></strong> - How could you reasonably and rationally optimise for what creates more beauty, life, or love?</li>
 	<li><strong><a href="Biased evidence selection.html">Biased evidence selection</a></strong></li>
 	<li><strong><a href="Capitalism.html">Capitalism</a></strong> - We're meta-optimising for wellbeing and happiness by optimising proxies that no longer show clear correlations for either of the two.</li>
