--- a/content/Hemispherical asymmetry (Brain).html
+++ b/content/Hemispherical asymmetry (Brain).html
@@ -9,7 +9,7 @@
 <p><strong>Outgoing connections:</strong></p>
 <ul>
 	<li><strong><a href="Animal views.html">Animal views</a></strong> - The left hemisphere has difficulty in sensing the life force in entities outside itself.</li>
-	<li><strong><a href="Artificial intelligence.html">Artificial intelligence</a></strong> - Intelligence modelled after our left hemisphere.</li>
+	<li><strong><a href="Artificial Intelligence.html">Artificial Intelligence</a></strong> - Intelligence modelled after our left hemisphere.</li>
 	<li><strong><a href="Avoiding uncertainty.html">Avoiding uncertainty</a></strong> - The left hemisphere deals terribly with uncertainty and fuzzy borders.</li>
 	<li><strong><a href="Being reasonable.html">Being reasonable</a></strong></li>
 	<li><strong><a href="Biased evidence selection.html">Biased evidence selection</a></strong> - Narrow spotlight on that which confirms firmly held beliefs.</li>
