--- a/content/Language.html
+++ b/content/Language.html
@@ -8,7 +8,7 @@
 </blockquote>
 <p><strong>Outgoing connections:</strong></p>
 <ul>
-	<li><strong><a href="Artificial intelligence.html">Artificial Intelligence</a></strong></li>
+	<li><strong><a href="Artificial Intelligence.html">Artificial Intelligence</a></strong></li>
 	<li><strong><a href="Apathy.html">Apathy</a></strong></li>
 	<li><strong><a href="Breakdown of information infrastructure.html">Breakdown of information infrastructure</a></strong></li>
 	<li><strong><a href="Cognitive dissonance.html">Cognitive dissonance</a></strong></li>
