--- a/content/Moloch.html
+++ b/content/Moloch.html
@@ -20,7 +20,7 @@ To those who question my creation, I'm not real</p>
 <br>They broke their backs lifting Moloch to Heaven! Pavements, trees, radios, tons! lifting the city to Heaven which exists and is everywhere about us!</p>
 <br>Visions! omens! hallucinations! miracles! ecstasies! gone down the American river!</p>
 <br>Dreams! adorations! illuminations! religions! the whole boatload of sensitive bullshit!</p>
-<br>Breakthroughs! over the river! flips and crucifixions! gone down the flood! Highs! Epiphanies! Despairs! Ten years’ animal screams and suicides! Minds! New loves! Mad generation! down on the rocks of Time!</p>
+<br>Breakthroughs! over the river! flips and crucifixions! gone down the flood! Highs! Epiphanies! Despairs! Ten yearsï¿½ animal screams and suicides! Minds! New loves! Mad generation! down on the rocks of Time!</p>
 <br>Real holy laughter in the river! They saw it all! the wild eyes! the holy yells! They bade farewell! They jumped off the roof! to solitude! waving! carrying flowers! Down to the river! into the street!</p>
 <br>Allen Ginsberg, Howl</p>
 </blockquote>
