--- a/content/Illusion of understanding.html
+++ b/content/Illusion of understanding.html
@@ -9,7 +9,7 @@
 <p>As a predicament, the illusion of understanding presents us with a world that never makes real sense with the explanations we have, it doesn't behave the way we expect or want. In short, everything is infinitely more complex than we can know, and because it is comforting and often useful to place the world within the frames of concepts, models, principles, and laws, we end up with an illusion of understanding the world, missing that it stretches outside of the frames, endlessly in all directions.</p>
 <p><strong>Outgoing connections:</strong></p>
 <ul>
-	<li><strong><a href="Artificial intelligence.html">Artificial intelligence</a></strong> - Can an artificial intelligence ever understand anything? Much of our modern inability to understand comes from an artificialisation of our own intelligence.</li>
+	<li><strong><a href="Artificial Intelligence.html">Artificial Intelligence</a></strong> - Can an artificial intelligence ever understand anything? Much of our modern inability to understand comes from an artificialisation of our own intelligence.</li>
 	<li><strong><a href="Being reasonable.html">Being reasonable</a></strong> - "The opposite of a correct statement is a false statement. But the opposite of a profound truth may well be another profound truth." - Niels Bohr. Reason only gets you so far, unless reason is the furthest you think you can go.</li>
 	<li><strong><a href="Carbon fundamentalism.html">Carbon fundamentalism</a></strong></li>
 	<li><strong><a href="Climate footprints.html">Climate footprints</a></strong></li>
